# windows-experiments

./: Cargo.toml
examples/: get_devices.rs  get_mice.rs  poll_device.rs  poll_devices.rs  poll_keyboard.rs
src/: lib.rs  main.rs  polling.rs
