[package]
name = "windows-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Devices_Enumeration",
    "Foundation_Collections",
    "Win32",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
windows-core = "0.58.0"
